--- a/Heinen DSC 540 Weeks 3 & 4.ipynb
+++ b/Heinen DSC 540 Weeks 3 & 4.ipynb
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 519,
    "id": "1697a067-097a-4760-ad88-0afc6b88e2c7",
    "metadata": {},
    "outputs": [],
@@ -2554,13 +2554,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 521,
    "id": "bfe7d139-4d0a-4085-9561-52927eb420fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
-    "CREATE TABLE directory3\n",
+    "CREATE TABLE directory\n",
     "(name VARCHAR(50), \n",
     "address VARCHAR(150), \n",
     "city VARCHAR(25),\n",
@@ -2572,45 +2572,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 523,
    "id": "01ac5d65-72d0-442c-9dc8-4fc73af485f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# build connection to database. \n",
-    "con = sqlite3.connect('mydata.sqlite', timeout = 30)\n"
+    "con = sqlite3.connect('mydata.sqlite2', timeout = 30)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 525,
    "id": "f62c029b-5356-44bd-a461-e0709beb0456",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "database is locked",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[474], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Execute the query to build table \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m con\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDROP TABLE directory;\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m con\u001b[38;5;241m.\u001b[39mexecute(query)\n",
-      "\u001b[0;31mOperationalError\u001b[0m: database is locked"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x161317940>"
+      ]
+     },
+     "execution_count": 525,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Execute the query to build table \n",
-    "con.execute('DROP TABLE directory;')\n",
+    "#con.execute('DROP TABLE directory;')\n",
     "con.execute(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 527,
    "id": "bb060805-c62a-4ce2-a78c-46a748783b3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function Connection.close()>"
+      ]
+     },
+     "execution_count": 527,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Commit changes to database\n",
     "con.commit()\n",
@@ -2619,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 529,
    "id": "cb67425d-8121-4465-9799-ad82c7216cb5",
    "metadata": {},
    "outputs": [],
@@ -2641,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 531,
    "id": "85ad2066-15d4-4769-bf2a-36c36e3ec670",
    "metadata": {},
    "outputs": [],
@@ -2652,10 +2662,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 533,
    "id": "f7394aac-0ad8-4838-8188-470f3992454e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x151c60b40>"
+      ]
+     },
+     "execution_count": 533,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# In connection execute many and insert values into data base. \n",
     "con.executemany(stmt, data) "
@@ -2663,10 +2684,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 535,
    "id": "0a834055-a147-4721-af76-045b46b23c91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function Connection.close()>"
+      ]
+     },
+     "execution_count": 535,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Commit changes to database\n",
     "con.commit\n",
@@ -2675,7 +2707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 539,
    "id": "5a13ac3b-5fe8-445d-8688-f99291aaf40f",
    "metadata": {},
    "outputs": [],
@@ -2683,15 +2715,36 @@
     "# Build Query to show the results from our table. \n",
     "\n",
     "# use con.execute to run our query store in cursor\n",
-    "cursor=con.execute('select * from directory3')"
+    "cursor=con.execute('select * from directory')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 541,
    "id": "059e4d14-56ee-41a4-8ebe-a1a274015ce0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Matt', '16406 Willow drive', 'Edina', 'MN', '55436', '9865438769'),\n",
+       " ('Billy', '99 High st', 'Denver', 'CO', '80210', '3035438769'),\n",
+       " ('Alex', '4678 Lake St', 'Chanhappenin', 'MN', '55678', '6125438769'),\n",
+       " ('Sammy', '99 Gretzky Ln', 'Milwaukee', 'Wi', '44436', '2225438769'),\n",
+       " ('Steve', '52 Quincy Shore Dr', 'Quincy', 'MA', '02056', '6785438769'),\n",
+       " ('Katie', '2 Quincy Shore Dr', 'Quincy', 'MA', '02056', '6785438653'),\n",
+       " ('Laura', '81 Amherst Way', 'Amherst', 'MA', '03456', '8765429856'),\n",
+       " ('Mikey', '7 Ball ln', 'Farm Island', 'MN', '55789', '9868765438'),\n",
+       " ('Samantha', '360 Trick St', 'Mahtomedi', 'MN', '55567', '986587249'),\n",
+       " ('Tyler', '8 Big Country Cir', 'Dallas', 'TX', '95347', '8376438769'),\n",
+       " ('Cassidy', '8 Big Country Cir', 'Dallas', 'TX', '95347', '8376438875')]"
+      ]
+     },
+     "execution_count": 541,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use fetch all to retreive information from directory. \n",
     "rows= cursor.fetchall()\n",
@@ -2701,7 +2754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 543,
    "id": "465ab4d0-e492-45c1-92c7-00f2b7eb4a72",
    "metadata": {},
    "outputs": [],
@@ -2712,7 +2765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 545,
    "id": "3d9ae47b-02d9-4ae4-9019-b161f72efb2e",
    "metadata": {},
    "outputs": [],
@@ -2723,21 +2776,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 547,
    "id": "ab2fb2e4-d2d2-4976-9a6d-2d8cca4257bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define database by using create engine. \n",
-    "db = sqla.create_engine('sqlite:///mydata.sqlite')"
+    "db = sqla.create_engine('sqlite:///mydata.sqlite2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 549,
    "id": "7236beb7-74cd-4480-95b9-b9800fb921a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>PhoneNumber</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, address, city, state, zip, PhoneNumber]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 549,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use pandas read sql to query the database into a df \n",
     "pd.read_sql('select * from directory', db)"
