--- a/Heinen DSC 540 Weeks 3 & 4.ipynb
+++ b/Heinen DSC 540 Weeks 3 & 4.ipynb
@@ -8769,7 +8769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 625,
    "id": "00016507-ca1f-4e6c-a6f5-8040c58a7c43",
    "metadata": {},
    "outputs": [
@@ -8779,7 +8779,7 @@
        "['Rank', 'Country', 'GDP(US$MM)']"
       ]
      },
-     "execution_count": 607,
+     "execution_count": 625,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8796,7 +8796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 627,
    "id": "0f2a3924-857d-4fb2-8551-af00e8e9f5ff",
    "metadata": {},
    "outputs": [],
@@ -8807,7 +8807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 637,
    "id": "8bdf2ae5-a559-416a-b11e-417926518ea9",
    "metadata": {},
    "outputs": [],
@@ -8815,30 +8815,35 @@
     "# Build a function to find right text \n",
     "\n",
     "def find_right_text(i, td):\n",
+    "    # When the index  is 0 use get text and strip to return data\n",
     "    if i == 0:\n",
     "        return td.getText().strip()\n",
+    "   # When the index  is 1 use get text and strip to return data\n",
     "    elif i == 1:\n",
     "        return td.getText().strip()\n",
+    "   # if neither of the above conditions is met. \n",
     "    else:\n",
+    "        # return the stripped text from the element after the spade charachter. \n",
     "        index = td.text.find(\"♠\")\n",
     "        return td.text[index+1:].strip()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 639,
    "id": "fb507c58-53e5-43a0-92a1-729722c87577",
    "metadata": {},
    "outputs": [],
    "source": [
     "#find all of the td elements in rows 2 and assign to data_rows2\n",
-    "# use get text and strip to retreve and clean whitespace. \n",
-    "data_rows2 = [[td.get_text().strip() for td in tr.findAll('td')] for tr in rows2]"
+    "# itterate through each tr element in rows2 \n",
+    "#for each td element found call find the right text passsing and index an the td element. \n",
+    "data_rows2 = [[find_right_text(i, td) for i, td in enumerate(tr.findAll('td'))] for tr in rows2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 641,
    "id": "11105e76-54fa-48b3-a90e-1e189e8e3e84",
    "metadata": {},
    "outputs": [
@@ -8879,47 +8884,47 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td></td>\n",
-       "      <td>World[19]</td>\n",
-       "      <td>79,865,481</td>\n",
+       "      <td>World</td>\n",
+       "      <td>80,683,787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>United States</td>\n",
-       "      <td>19,390,600</td>\n",
+       "      <td>19,390,604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>China[n 1]</td>\n",
-       "      <td>12,014,610</td>\n",
+       "      <td></td>\n",
+       "      <td>European Union[23]</td>\n",
+       "      <td>17,277,698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>4,872,135</td>\n",
+       "      <td>2</td>\n",
+       "      <td>China[n 4]</td>\n",
+       "      <td>12,237,700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>3,684,816</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>4,872,137</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Rank        Country  GDP(US$MM)\n",
-       "0           World[19]  79,865,481\n",
-       "1    1  United States  19,390,600\n",
-       "2    2     China[n 1]  12,014,610\n",
-       "3    3          Japan   4,872,135\n",
-       "4    4        Germany   3,684,816"
+       "  Rank             Country  GDP(US$MM)\n",
+       "0                    World  80,683,787\n",
+       "1    1       United States  19,390,604\n",
+       "2       European Union[23]  17,277,698\n",
+       "3    2          China[n 4]  12,237,700\n",
+       "4    3               Japan   4,872,137"
       ]
      },
-     "execution_count": 613,
+     "execution_count": 641,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8930,16 +8935,154 @@
     "# display source name and table \n",
     "# use index 1 \n",
     "print(source_names[1])\n",
-    "df1.head()"
+    "df2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 645,
    "id": "13824c85-bccf-453c-94b7-0aeeb711e285",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Rank', 'Country', 'GDP(US$MM)']"
+      ]
+     },
+     "execution_count": 645,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the headers in data tables (only the 3nd one (use index 2) \n",
+    "# use gettext and strip methods to find each thread element in the 1 st table. \n",
+    "header3 = [th.getText().strip() for th in data_tables[2][0].findAll('thead')[0].findAll('th')]\n",
+    "# print headers. \n",
+    "header3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 647,
+   "id": "8552b37a-20c6-49dc-ac67-019d15f12820",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# In the 3rd data tablke find all body elements and find all tr elements and assign to rows 3 \n",
+    "rows3 = data_tables[2][0].findAll('tbody')[0].findAll('tr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 649,
+   "id": "28f0c9b6-1a53-4df6-8002-9f9be733d6bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find all of the td elements in rows 3 and assign to data_rows3\n",
+    "# itterate through each tr element in rows3\n",
+    "#for each td element found call find the right text passsing and index an the td element. \n",
+    "data_rows3 = [[find_right_text(i, td) for i, td in enumerate(tr.findAll('td'))] for tr in rows3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 651,
+   "id": "f7a8c108-e014-45d2-82a2-261233bbb9b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "United Nations\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>GDP(US$MM)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td>World[24]</td>\n",
+       "      <td>75,648,448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>18,624,475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>China[n 4]</td>\n",
+       "      <td>11,218,281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>4,936,211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>3,477,796</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Rank        Country  GDP(US$MM)\n",
+       "0           World[24]  75,648,448\n",
+       "1    1  United States  18,624,475\n",
+       "2    2     China[n 4]  11,218,281\n",
+       "3    3          Japan   4,936,211\n",
+       "4    4        Germany   3,477,796"
+      ]
+     },
+     "execution_count": 651,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build data frme with data from data_rows3 and column names from header 3\n",
+    "df3 = pd.DataFrame(data_rows3, columns=header3)\n",
+    "# display source name and table \n",
+    "# use index 2\n",
+    "print(source_names[2])\n",
+    "df3.head()"
+   ]
   },
   {
    "cell_type": "markdown",
