--- a/Heinen DSC 540 Weeks 3 & 4.ipynb
+++ b/Heinen DSC 540 Weeks 3 & 4.ipynb
@@ -9093,6 +9093,210 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 655,
+   "id": "e5a8e9a1-e8a1-4857-ab05-b86347efcdd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>ip_address</th>\n",
+       "      <th>visit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Sonny</td>\n",
+       "      <td>Dahl</td>\n",
+       "      <td>sdahl0@mysql.com</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>135.36.96.183</td>\n",
+       "      <td>1225.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>dhoovart1@hud.gov</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>237.165.194.143</td>\n",
+       "      <td>919.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Gar</td>\n",
+       "      <td>Armal</td>\n",
+       "      <td>garmal2@technorati.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>166.43.137.224</td>\n",
+       "      <td>271.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Chiarra</td>\n",
+       "      <td>Nulty</td>\n",
+       "      <td>cnulty3@newyorker.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>139.98.137.108</td>\n",
+       "      <td>1002.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sleaver4@elegantthemes.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46.117.117.27</td>\n",
+       "      <td>2434.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id first_name last_name                       email gender  \\\n",
+       "0   1      Sonny      Dahl            sdahl0@mysql.com   Male   \n",
+       "1   2        NaN       NaN           dhoovart1@hud.gov    NaN   \n",
+       "2   3        Gar     Armal      garmal2@technorati.com    NaN   \n",
+       "3   4    Chiarra     Nulty       cnulty3@newyorker.com    NaN   \n",
+       "4   5        NaN       NaN  sleaver4@elegantthemes.com    NaN   \n",
+       "\n",
+       "        ip_address   visit  \n",
+       "0    135.36.96.183  1225.0  \n",
+       "1  237.165.194.143   919.0  \n",
+       "2   166.43.137.224   271.0  \n",
+       "3   139.98.137.108  1002.0  \n",
+       "4    46.117.117.27  2434.0  "
+      ]
+     },
+     "execution_count": 655,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1) read in visit_data.csv file \n",
+    "\n",
+    "# Define the file path to CSV file \n",
+    "file_path = 'visit_data.csv'\n",
+    "\n",
+    "# use read_csv to read the file into a DataFrame. \n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# preview using head method. \n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 665,
+   "id": "cc5115aa-5775-42f2-a992-d45d80dc237a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 7)"
+      ]
+     },
+     "execution_count": 665,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2) Check for duplicates. \n",
+    "\n",
+    "# Filter df to only include duplicate rows. \n",
+    "duplicate_rows = df[df.duplicated()]\n",
+    "# display shape. \n",
+    "duplicate_rows.shape\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90437018-2e24-4c74-bb31-1b7282294824",
+   "metadata": {},
+   "source": [
+    "Here we can see that there are no completer repeates or duplicates of entire rows. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 685,
+   "id": "56ff52bb-7e75-4d66-8b70-88cb6524476a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are any emails null:  False\n",
+      "Are any IPs null:  False\n",
+      "Are any visits null:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3) Check if any essential column contains NaN. \n",
+    "# The essential columns would be email, IP and # visits. \n",
+    "\n",
+    "# Use the is null and any methods to determin if any value in an essential column is null. \n",
+    "print('Are any emails null: ', (df['email'].isnull().any()))\n",
+    "print('Are any IPs null: ', (df['ip_address'].isnull().any()))\n",
+    "print('Are any visits null: ', (df['visit'].isnull().any()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a92596a2-d817-4b18-9352-18e115ac3690",
+   "metadata": {},
+   "source": [
+    "Here we can see that some visits are null or contatin NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c992d0a2-5885-4346-8e2a-c326abfc5e33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4) Get rid of outliers. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9537080f-51e5-4046-a3d3-95bebd61732b",
    "metadata": {},
