--- a/Heinen DSC 540 Weeks 3 & 4.ipynb
+++ b/Heinen DSC 540 Weeks 3 & 4.ipynb
@@ -9094,7 +9094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 692,
    "id": "e5a8e9a1-e8a1-4857-ab05-b86347efcdd6",
    "metadata": {},
    "outputs": [
@@ -9199,7 +9199,7 @@
        "4    46.117.117.27  2434.0  "
       ]
      },
-     "execution_count": 655,
+     "execution_count": 692,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9288,12 +9288,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 694,
+   "id": "8cd8204d-3135-4959-9506-f1af2aa8d10d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Size of DataFrame:  (1000, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.5 record current size of the df \n",
+    "\n",
+    "# use shape to store original size of df\n",
+    "\n",
+    "original_size = df.shape\n",
+    "\n",
+    "print('Original Size of DataFrame: ', original_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c992d0a2-5885-4346-8e2a-c326abfc5e33",
    "metadata": {},
    "outputs": [],
    "source": [
     "#4) Get rid of outliers. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 702,
+   "id": "9a1890ce-43c1-4b68-89a8-ff7ef772ba8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of DataFrame after removing non finite values:  (974, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Insure that all number of visits are finite value and not a decimal. \n",
+    "\n",
+    "# Build function to determine if each value is an intiger \n",
+    "def is_integer(value):\n",
+    "    # Check that value is an intiger or a float that represents a whole number. \n",
+    "    return isinstance(value, (int, float)) and value.is_integer()\n",
+    "\n",
+    "# Loop through the column and remove rows where the value is not an integer\n",
+    "df_finite = df[df['visit'].apply(is_integer)]\n",
+    "\n",
+    "# assign size after removing decimal visits.\n",
+    "size_after_int = df_finite.shape\n",
+    "\n",
+    "print('Size of DataFrame after removing non finite values: ', size_after_int)\n"
    ]
   },
   {
