--- a/Heinen DSC 540 Weeks 3 & 4.ipynb
+++ b/Heinen DSC 540 Weeks 3 & 4.ipynb
@@ -9352,6 +9352,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 708,
+   "id": "ad9976b6-1e10-4668-916a-0aa7e11ae621",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The difference in the size of the data sets is:  26  Less rows.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5) report the size difference. \n",
+    "\n",
+    "print('The difference in the size of the data sets is: ', \n",
+    "      (original_size[0]- size_after_int[0]),' Less rows.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3425ca70-c1b2-4464-80d5-ce39f857fc81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9537080f-51e5-4046-a3d3-95bebd61732b",
    "metadata": {},
