--- a/Heinen DSC 540 Weeks 3 & 4.ipynb
+++ b/Heinen DSC 540 Weeks 3 & 4.ipynb
@@ -9468,11 +9468,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 719,
    "id": "7740a198-42da-42a4-bb2c-655c6d771926",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import packages. \n",
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 723,
+   "id": "c459162a-4e97-4d18-8404-a50df8483cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/xv/q0156cqs67s40wbxq6_vfykr0000gn/T/ipykernel_6615/4201135908.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_z_score['z-score'] = stats.zscore(df_box.visit)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize new df\n",
+    "df_z_score = df_box\n",
+    "\n",
+    "# calculate the z score of visits. add to df. \n",
+    "df_z_score['z-score'] = stats.zscore(df_box.visit)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 725,
+   "id": "b982a9b4-7883-4225-8492-995f4360046e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove rows with z score above 3 \n",
+    "df_z_score_no_outliers = df_z_score[(df_z_score['z-score'] < 3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 727,
+   "id": "9a54fa8a-f30e-49ce-8f84-0d71c48a6264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The new data set after removing z score outliers:  923\n"
+     ]
+    }
+   ],
+   "source": [
+    "# display changes to df\n",
+    "\n",
+    "print('The new data set after removing z score outliers: ', df_z_score_no_outliers.shape[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29dc125b-30e4-4700-be91-434aaacd4fdd",
+   "metadata": {},
+   "source": [
+    "removing outliers by z-score did not effect out dataset size. "
+   ]
   },
   {
    "cell_type": "markdown",
