--- a/Term Project/Heinen_DSC540_Milestone_2.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 397,
    "id": "1b5ceb58-5f0c-4865-8ab2-2bf37263ba82",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 399,
    "id": "406a121f-e199-4644-911f-66c701722e8f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 400,
    "id": "1d62befc-8b02-417d-835e-60d25d62cb62",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "[5 rows x 94 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 403,
    "id": "79b0ce27-a16b-4b73-bc0b-3a2ff37845c7",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 404,
    "id": "19c760b0-d97c-48aa-a89c-98611f2169a6",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "(2831, 85)"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 405,
    "id": "e874cb26-daee-4504-89f1-7ddf473f3b26",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "(2831, 82)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 407,
    "id": "b7020fff-9852-48ab-be1b-c673859c7306",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 408,
    "id": "a1817f6b-dcd4-4908-8b22-3a95815753ce",
    "metadata": {},
    "outputs": [
@@ -529,12 +529,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36c4faf6-3a92-471a-8a7c-e156b3b6210d",
+   "cell_type": "markdown",
+   "id": "d24f6a17-bfdf-4ff8-8bb1-bb9ada8da7da",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Transformation 3: convert date into Unix time (UTC time zone). \n",
+    "\n",
+    "This transformation will be done by assigning a start time of 7 pm (most common start time in baseball to all games. Additionally a transformation will be done to unix time which is required for our API weather call. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "id": "3a4bdc50-31e7-441f-8c30-bbf01e5c9946",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    game_date   unix_time\n",
+      "0  2013-07-05  1373068800\n",
+      "1  2018-06-19  1529452800\n",
+      "2  2015-05-24  1432512000\n",
+      "3  2012-09-29  1348963200\n",
+      "4  2019-05-26  1558915200\n",
+      "5  2023-06-03  1685836800\n",
+      "6  2019-09-14  1568505600\n",
+      "7  2022-04-11  1649721600\n",
+      "8  2018-06-25  1529971200\n",
+      "9  2012-07-08  1341792000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert date column to Unix time\n",
+    "# Add this column to the Data Frame\n",
+    "# Use game_date and to_datetime method to convert to unix. \n",
+    "carlos['unix_time'] = pd.to_datetime(carlos['game_date']).astype(int) // 10**9\n",
+    "\n",
+    "# Add a column that assumes a 7pm start time for every game. \n",
+    "# Convert Unix time to 7pm\n",
+    "# During daylight savings, CDT is 5 hours behing UTC. \n",
+    "# to get 7pm or 19:00 we need to add 5 more hours to catch up making for 24 hours. \n",
+    "carlos['unix_time'] = carlos['unix_time'] + (24 * 3600)  # 26 hours * 3600 seconds/hour\n",
+    "\n",
+    "# Create a game date_time to validate the Unix time. \n",
+    "\n",
+    "\n",
+    "# Preview the result of the time related columns. \n",
+    "# Preview the results of the onbase columns. \n",
+    "print(carlos[['game_date', 'unix_time']].head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fab0a1-24ea-4c99-a241-8afe2352ad8c",
+   "metadata": {},
+   "source": [
+    "Here we see that we have left our game date and converted to 7pm Central in UTC Unix time "
+   ]
   }
  ],
  "metadata": {
